# Effective-Cpp

./: CMakeLists.txt  RADEME.md  README.md  main.cpp
.cache/clangd/index/: A.cpp.EF98C63D23FC999C.idx  A.h.CDE9A513A50253B8.idx  a.cpp.C5C2C097FEB3CFF9.idx  a.h.C3F34A53E8507E09.idx  aa.h.D3D48A5F7DC89600.idx  assignOperator.cpp.8814E1267194695A.idx  copyMemberAny.cpp.D87ADCF1F7505771.idx  main.cpp.08203119A709C27D.idx  main.cpp.7B44E5B72EEAE4B0.idx  main.cpp.AB01FB08CDF85CE2.idx  newAndDelete.cpp.85EFC07909CA7DE9.idx  polymorphism.cpp.205BC7111D6E183D.idx
include/: RAII.cpp  assignOperator.cpp  cast.cpp  copyMemberAny.cpp  newAndDelete.cpp  polymorphism.cpp  read.cpp  selfAssign.cpp
src/: main.cpp
